# wazzup

./: .gitignore  .gitleaks.toml  .lefthook.toml  .markdownlint.yaml  .mise.toml  .shellcheckrc  .yamlfmt.yaml  .yamllint.yaml  Makefile  README.md  Taskfile.yml  dprint.json  issue-labeler.yaml  pr-labeler.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  issue-labeler.yaml  labels.yaml  pr-labeler.yaml
.github/agents/: wazzup-curator.agent.md  wazzup-transparency-reporter.agent.md  wazzup-writer.agent.md
.github/workflows/: autofix.yml  ci.yml  config-sync.yml  label-sync.yml  labeler.yml  lint.yml  news-hourly-watchdog.yml  news-hourly.yml  news-watchdog.yml  news.yml  pages.yml
config/: interests.yml  sources.yml
docs/: architecture.md  github-actions.md  requirements.md  testing.md
docs/adr/: 0001-github-native-static-architecture.md  0002-ai-execution-strategy.md  0003-generated-data-state-storage.md
public/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
scripts/: check_format.py  lint.py  pages_build.py
src/wazzup/: __init__.py  ai.py  build_info.py  config.py  feeds.py  models.py  pipeline.py  publisher.py  scoring.py  validate_data.py
tests/: test_ai.py  test_build_info.py  test_config.py  test_feeds.py  test_performance.py  test_pipeline.py  test_publisher.py  test_pwa_assets.py  test_repo_automation.py  test_scoring.py  test_workflows.py
tests/fixtures/: microsoft-security-blog.xml  microsoft-security-threat-intelligence.xml  nos-news.xml  story-clustering.xml
